removed deprecated function, fixed bug in sigma interpretation

--- a/=3.0.5
+++ b/=3.0.5
@@ -1,6 +1,2 @@
-Collecting aicspylibczi
-  Downloading aicspylibczi-3.1.0-cp310-cp310-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (947 kB)
-     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 947.4/947.4 kB 907.5 kB/s eta 0:00:00
-Requirement already satisfied: numpy>=1.14.1 in /home/sean/fsl/lib/python3.10/site-packages (from aicspylibczi) (1.21.6)
-Installing collected packages: aicspylibczi
-Successfully installed aicspylibczi-3.1.0
+Requirement already satisfied: aicspylibczi in /home/sean/anaconda3/lib/python3.8/site-packages (3.1.2)
+Requirement already satisfied: numpy>=1.14.1 in /home/sean/anaconda3/lib/python3.8/site-packages (from aicspylibczi) (1.21.2)
